<resources>
    <string name="app_name">Pandalum</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="speck_active">I am active</string>
    <string name="speck_not_active">I am not active</string>
    <string name="exp_title">Speaking Clock</string>
    <string name="exp_des">The clock will speak after one hour in a periodic interval and the interval is exact</string>
    <string name="no_event">No Event</string>
    <string name="edit">edit</string>
    <string name="save">Save</string>
    <string name="title_hint">Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_color">Select Color</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="specking_clock">Speaking Clock</string>
    <string name="time_table">Time Table</string>
</resources>
